# 2020-advent-of-code

./: .gitignore  Cargo.nix  Cargo.toml  LICENSE.md  default.nix  shell.nix
01/: Cargo.toml
01/src/: main.rs
01/tests/: main.rs
02/: Cargo.toml
02/src/: main.rs
02/tests/: main.rs
03/: Cargo.toml
03/src/: main.rs
03/tests/: main.rs
04/: Cargo.toml
04/src/: main.rs
04/tests/: main.rs
05/: Cargo.toml
05/src/: main.rs
05/tests/: main.rs
06/: Cargo.toml
06/src/: main.rs
06/tests/: main.rs
07/: Cargo.toml
07/src/: main.rs
07/tests/: main.rs
08/: Cargo.toml
08/src/: main.rs
08/tests/: main.rs
09/: Cargo.toml
09/src/: main.rs
09/tests/: main.rs
10/: Cargo.toml
10/src/: main.rs
10/tests/: main.rs
11/: Cargo.toml
11/src/: main.rs
11/tests/: main.rs
12/: Cargo.toml
12/src/: main.rs
12/tests/: main.rs
13/: Cargo.toml
13/src/: main.rs
13/tests/: main.rs
14/: Cargo.toml
14/src/: main.rs
14/tests/: main.rs
15/: Cargo.toml
15/src/: main.rs
15/tests/: main.rs
16/: Cargo.toml
16/src/: main.rs
16/tests/: main.rs
17/: Cargo.toml
17/src/: main.rs
17/tests/: main.rs
18/: Cargo.toml
18/src/: expression.lalrpop  main.rs
18/tests/: main.rs
19/: Cargo.toml
19/src/: main.rs
19/tests/: main.rs
20/: Cargo.toml
20/src/: main.rs
20/tests/: main.rs
21/: Cargo.toml
21/src/: main.rs
21/tests/: main.rs
22/: Cargo.toml
22/src/: main.rs
22/tests/: main.rs
23/: Cargo.toml
23/src/: main.rs
23/tests/: main.rs
24/: Cargo.toml  hex.txt
25/: Cargo.toml
lib/: Cargo.toml
(+5 files in other folders)
